--- a/main.css/main.css
+++ b/main.css/main.css
@@ -1,13 +1,14 @@
 
 body{
     background-color: black;
-    color: mintcream
+    color: white
 }
 
 
-.container {  display: grid;
+.container {  
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 0.1fr 0.9fr 2.1fr;
+    grid-template-rows: 0.1fr 0.1fr 2.1fr;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
@@ -15,7 +16,8 @@ body{
     "Header\(Featured-Shows\) Header\(Featured-Shows\) Header\(Featured-Shows\)"
     "Ticket-Sales Ticket-Sales Ticket-Sales";
 }
-.Header\(Featured-Shows\) {  display: grid;
+.Header\(Featured-Shows\) {  
+    display: grid;
     grid-template-columns: 20fr 0fr 1fr;
     grid-template-rows: 1.1fr 0.9fr 1.5fr 0.5fr;
     gap: 0px 0px;
@@ -28,7 +30,8 @@ body{
     grid-area: Header\(Featured-Shows\);
 }
 
-.border3 {  display: grid;
+.border3 {  
+    display: grid;
     grid-template-columns: 1fr [e] 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     gap: 0px 0px;
@@ -40,7 +43,8 @@ body{
     grid-area: border3;
 }
 
-.Ticket-Sales {  display: grid;
+.Ticket-Sales {  
+    display: grid;
     grid-template-columns: 1.2fr 5.3fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     gap: 0px 0px;
@@ -53,7 +57,8 @@ body{
     grid-area: Ticket-Sales;
 }
 
-.img {  display: grid;
+.img {  
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     grid-auto-rows: 1fr;
